deploy/oh4/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-ingress
  namespace: api
spec:
  ingressClassName: nginx
  rules:
    - host: ohteam3tripinsights.northeurope.cloudapp.azure.com
      http:
        paths:
          - path: /api/trips
            pathType: Prefix
            backend:
              service:
                name: trips
                port:
                  number: 80
          - path: /api/user
            pathType: Prefix
            backend:
              service:
                name: userprofile
                port:
                  number: 80
          - path: /api/poi
            pathType: Prefix
            backend:
              service:
                name: poi
                port:
                  number: 80
          - path: /api/user-java
            pathType: Prefix
            backend:
              service:
                name: user-java
                port:
                  number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-ingress
  namespace: web
spec:
  ingressClassName: nginx
  rules:
    - host: ohteam3tripinsights.northeurope.cloudapp.azure.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: tripviewer
                port:
                  number: 80
